deploy-pod.yaml
apiVersion: v1
kind: Service
metadata:
  name: naver
  labels:
    app.kubernetes.io/instance: kong-app
spec:
  type: NodePort
  selector:
    app: naver
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: naver
  labels:
    app.kubernetes.io/instance: kong-app
spec:
  replicas: 10
  selector:
    matchLabels:
      app: naver
  template:
    metadata:
      labels:
        app: naver
    spec:
      containers:
        - name: naver
          image: sjhong1994/k8s-lab:1.0
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: cloud
  labels:
    app.kubernetes.io/instance: kong-app
spec:
  type: NodePort
  selector:
    app: cloud
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud
  labels:
    app.kubernetes.io/instance: kong-app
spec:
  replicas: 10
  selector:
    matchLabels:
      app: cloud
  template:
    metadata:
      labels:
        app: cloud
    spec:
      containers:
        - name: cloud
          image: sjhong1994/k8s-lab:1.0
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: platform
  labels:
    app.kubernetes.io/instance: kong-app
spec:
  type: NodePort
  selector:
    app: platform
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform
  labels:
    app.kubernetes.io/instance: kong-app
spec:
  replicas: 10
  selector:
    matchLabels:
      app: platform
  template:
    metadata:
      labels:
        app: platform
    spec:
      containers:
        - name: platform
          image: sjhong1994/k8s-lab:1.0
          ports:
            - containerPort: 80
